--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
     // CameraX
-    implementation "androidx.camera:camera-camera2:1.1.0-alpha03"
-    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha03"
-    implementation "androidx.camera:camera-view:1.0.0-alpha23"
+//    implementation "androidx.camera:camera-camera2:1.1.0-alpha03"
+//    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha03"
+//    implementation "androidx.camera:camera-view:1.0.0-alpha23"
 }
